--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Resources
-markdown: redcarpet
+markdown: kramdown
 highlighter: rouge
 permalink: /:year/:month/:title/
 baseurl: "/ResourceGallery"
